--- a/_posts/2016-01-25-EM.md
+++ b/_posts/2016-01-25-EM.md
@@ -9,13 +9,13 @@ tags: 机器学习 EM算法
 EM 算法
 =======
 
-简介
+1.1 简介
 ----
 
 期望最大化(ExpectationMaximization)算法最初是由 Ceppellini\[2\]
 等人1950年在讨论基因频率的估计的时候提出的。后来又被Hartley\[3\]和Baum\[4\]等人发展的更加广泛。目前引用的较多的是1977年Dempster\[5\]等人的工作。它主要用于从的数据中计算最大似然估计。后来经过其他学者的发展，这个算法也被用于聚类等应用。
 
-最大似然估计
+1.2 最大似然估计
 ------------
 
 重复强调下，EM算法主要用于从的数据中计算最大似然估计，本身可以看成是特殊情况下计算极大似然的一种方法。
@@ -46,7 +46,7 @@ EM 算法
 
 而，$\hat{\theta} = \arg\max\limits_{\theta} L(\theta)$，易求得，$\hat{\theta}_A = 0.8,\hat{\theta}_B = 0.45$。这就是我们一直所熟知的极大似然估计。
 
-EM算法 {#section:example}
+1.3 EM算法 {#section:example}
 ------
 
 我们将这个问题稍微改变一下：假设我们现在只知道每次试验有几次投掷出正面，但是不知道每次试验投掷的
