--- a/_posts/2016-01-25-EM.md
+++ b/_posts/2016-01-25-EM.md
@@ -12,8 +12,7 @@ EM 算法
 1.1 简介
 ----
 
-期望最大化(ExpectationMaximization)算法最初是由 Ceppellini\[2\]
-等人1950年在讨论基因频率的估计的时候提出的。后来又被Hartley\[3\]和Baum\[4\]等人发展的更加广泛。目前引用的较多的是1977年Dempster\[5\]等人的工作。它主要用于从的数据中计算最大似然估计。后来经过其他学者的发展，这个算法也被用于聚类等应用。
+期望最大化(ExpectationMaximization)算法最初是由 Ceppellini\[2\]等人1950年在讨论基因频率的估计的时候提出的。后来又被Hartley\[3\]和Baum\[4\]等人发展的更加广泛。目前引用的较多的是1977年Dempster\[5\]等人的工作。它主要用于从的数据中计算最大似然估计。后来经过其他学者的发展，这个算法也被用于聚类等应用。
 
 1.2 最大似然估计
 ------------
@@ -47,10 +46,7 @@ EM 算法
 1.3 EM算法 {#section:example}
 ------
 
-我们将这个问题稍微改变一下：假设我们现在只知道每次试验有几次投掷出正面，但是不知道每次试验投掷的
-是哪枚硬币。这个时候我们就称 $ Z $  为(Hidden Variable)， $ X $ 
-称为观察变量(Observed Variable)。
-当我们再来估计参数 $ \theta_A $ 和 $ \theta_B $ 时，数据就不够完整了。传统的极大似然估计很难解决，轮到EM算法上台展现了。
+我们将这个问题稍微改变一下：假设我们现在只知道每次试验有几次投掷出正面，但是不知道每次试验投掷的是哪枚硬币。这个时候我们就称 $ Z $  为(Hidden Variable)， $ X $ 称为观察变量(Observed Variable)。当我们再来估计参数 $ \theta_A $ 和 $ \theta_B $ 时，数据就不够完整了。传统的极大似然估计很难解决，轮到EM算法上台展现了。
 
 ![image](img/EM.png){width="80.00000%"}
 
