--- a/_posts/2016-01-25-EM.md
+++ b/_posts/2016-01-25-EM.md
@@ -27,7 +27,7 @@ EM 算法
 和 $ B $ ，这两枚硬币和普通的硬币不一样，他们投掷出正面的概率和投掷出反面的概率不一定相同。我们将  $ A $  和  $ B $  投掷出正面的概率分别记为  $ \theta_A $  和 $ \theta_B $ 。我们现在独立地做5
 次试验：随机的从这两枚硬币中抽取1 枚，投掷10次，统计出现正面的次数。将结果整理为如下的表格：
 
-![image](img/bexp.png){width="80.00000%"}
+![image](/assets/EM/bexp.png){width="80.00000%"}
 
 我们记录下两组随机变量 $ X = (X_1,X_2,X_3,X_4,X_5) $ 和 $ Z =(Z_1,Z_2,Z_3,Z_4,Z_5) $ ，其中 $ X_i\in \{0,1,2,3,4,5,6,7,8,9,10\} $ 
 代表试验 $ i $  中出现 正面的次数， $ Z_i \in \{A,B\} $ 
