--- a/_posts/2016-01-25-EM.md
+++ b/_posts/2016-01-25-EM.md
@@ -35,11 +35,13 @@ EM 算法
 
 我们的目标是根据实验结果来估计参数 $ \theta =(\theta_A,\theta_B) $ 。
 这个实验中的参数估计就是有的参数估计，这个是因为我们不仅知道每次试验中投掷出正面的次数，我们还知道每次试验中投掷的是硬币 $ A $ 
-还是 $ B $ 。  $  $ \begin{aligned}
+还是 $ B $ 。  
+
+$$ \begin{aligned}
   L(\theta) & = P(X,Z|\theta)\\
   & = C_5^3P(Z=A)^3(1-P(Z=A))^2\\
   & C_{10}^5\theta_B^5(1-\theta_B)^5C_{10}^9\theta_A^9(1-\theta_A)\notag \\
-  & C_{10}^8\theta_A^8(1-\theta_A)^2C_{10}^4\theta_B^4(1-\theta_B)^6C_{10}^7\theta_A^7(1-\theta_A)^3\notag\end{aligned} $  $ 
+  & C_{10}^8\theta_A^8(1-\theta_A)^2C_{10}^4\theta_B^4(1-\theta_B)^6C_{10}^7\theta_A^7(1-\theta_A)^3\notag\end{aligned} $$ 
 
 而， $ \hat{\theta} = \arg\max\limits_{\theta} L(\theta) $ ，易求得， $ \hat{\theta}_A = 0.8,\hat{\theta}_B = 0.45 $ 。这就是我们一直所熟知的极大似然估计。
 
@@ -48,7 +50,7 @@ EM 算法
 
 我们将这个问题稍微改变一下：假设我们现在只知道每次试验有几次投掷出正面，但是不知道每次试验投掷的是哪枚硬币。这个时候我们就称 $ Z $  为(Hidden Variable)， $ X $ 称为观察变量(Observed Variable)。当我们再来估计参数 $ \theta_A $ 和 $ \theta_B $ 时，数据就不够完整了。传统的极大似然估计很难解决，轮到EM算法上台展现了。
 
-![image](img/EM.png){width="80.00000%"}
+![image](img/EM.png){width="80%"}
 
 怎么玩呢？
 
