--- a/_posts/2016-01-25-EM.md
+++ b/_posts/2016-01-25-EM.md
@@ -50,7 +50,7 @@ $$ \begin{aligned}
 
 我们将这个问题稍微改变一下：假设我们现在只知道每次试验有几次投掷出正面，但是不知道每次试验投掷的是哪枚硬币。这个时候我们就称 $ Z $  为(Hidden Variable)， $ X $ 称为观察变量(Observed Variable)。当我们再来估计参数 $ \theta_A $ 和 $ \theta_B $ 时，数据就不够完整了。传统的极大似然估计很难解决，轮到EM算法上台展现了。
 
-![image](img/EM.png){width="80%"}
+![image](/assets/EM/EM.png){width="80%"}
 
 怎么玩呢？
 
@@ -93,16 +93,20 @@ EM算法的大致思路便是如此，只是在第二步处理上有所不同。
 EM算法推导
 ==========
 
-我们先写出似然函数表达式，：  $$ \begin{aligned}
+我们先写出似然函数表达式，：  
+
+$$ \begin{aligned}
 L(\theta) & = \ln \mathcal{P}(\textbf{X}|\theta)\\
 \mathcal{P}(\textbf{X}|\theta)& = \sum\limits_{\textbf{z}} \mathcal{P}(\textbf{X}|\textbf{z},\theta)\mathcal{P}(\textbf{z}|\theta)\end{aligned} $$ 
 
 由于隐藏变量的存在，我们无法像最大似然估计,那样通过求偏导那一套方法来估计参数 $ \theta $ .
 
 EM算法采用迭代的方法估计参数，保证每一次估计值都比上一次更加接近真实值，这就要求 $ L(\theta) $ 每一次迭代过程中都要递增。我们假设第 $ n $ 次迭代 $ \theta $ 的估计值为 $ \theta^n $ ，第 $ n+1 $ 次迭代时，
+
  $$ L(\theta) - L(\theta^n) = \ln \mathcal{P}(\textbf{X}|\theta) - \ln \mathcal{P}(\textbf{X}|\theta^n) $$ 
 
 我们希望最大化这个差值，这样我们就能不断逼近 $ L(\theta) $ 的最大值。我们来变换下这个式子，
+
  $$ \begin{aligned}
 L(\theta) - L(\theta^n) & = \ln \mathcal{P}(\textbf{X}|\theta) - \ln \mathcal{P}(\textbf{X}|\theta^n) \notag\\
 & = \ln \sum\limits_{\textbf{z}} \mathcal{P}(\textbf{X}|\textbf{z},\theta)\mathcal{P}(\textbf{z}|\theta) - \ln \mathcal{P}(\textbf{X}|\theta^n)\notag\\
@@ -111,7 +115,7 @@ L(\theta) - L(\theta^n) & = \ln \mathcal{P}(\textbf{X}|\theta) - \ln \mathcal{P}
 
 这个时候我们需要利用下著名的Jensen不等式[^3]：
 
-![image](img/JI.png){width="90.00000%"}
+![image](/assets/EM/JI.png){width="90.00000%"}
 
 因为 $ \ln(x) $ 为严格的单调递增函数，根据Jensen不等式，有，  $$ \label{em2}
   \ln \sum\limits_{i=1}^n \lambda_i x_i \geq \sum\limits_{i=1}^n \ln(x_i) $$ 
@@ -141,7 +145,7 @@ l(\theta^n|\theta^n) & = L(\theta^n) + \Delta (\theta^n|\theta^n) \\
 & = L(\theta^n) + \sum\limits_{\textbf{z}} \mathcal{P}(\textbf{z}|\textbf{X},\theta^n) \ln 1 \\
 & = L(\theta^n)\end{aligned} $$ 
 
-![image](img/its.png){width="90.00000%"}
+![image](/assets/EM/its.png){width="90.00000%"}
 
 上面推导了那么多，其实都是为了得出这张图。由 $ L(\theta) \geq  l(\theta|\theta^n) $ ， $ L(\theta) $ 为 $ l(\theta|\theta^n) $ 的上边界。又因为 $ l(\theta^n|\theta^n) = L(\theta^n) $ ，我们知道 $ L(\theta) $ 和 $ l(\theta|\theta^n) $ 在 $ \theta = \theta^n $ 时相等。通过令 $ \theta^{n+1} = \arg \max\limits_{\theta} l(\theta^n|\theta^n) $ ，我们保证了 $ L(\theta) $ 的值在每一步迭代过程中都是增加的。
 
@@ -167,7 +171,7 @@ EM算法收敛性
 
 这保证了EM算法每一次迭代中， $ L(\theta) $ 都是非减的。但如果 $ \theta_n $ 正好是函数 $ l(\theta|\theta^n) $ 的极大值点呢？此时 $ \theta^{n+1} = \arg \max\limits_{\theta} l(\theta|\theta^n) = \theta_n $ ，迭代终止，算法有可能陷入局部最大值，而得不到全局最优。
 
-![image](img/maxmin.png){width="40.00000%"}
+![image](/assets/EM/maxmin.png){width="40.00000%"}
 
 例子演算
 ========
