--- a/_posts/2016-01-25-EM.md
+++ b/_posts/2016-01-25-EM.md
@@ -132,13 +132,18 @@ L(\theta) - L(\theta^n) &= \ln \sum\limits_{\textbf{z}} \mathcal{P}(\textbf{z}|\
 & = \sum\limits_{\textbf{z}} \mathcal{P}(\textbf{z}|\textbf{X},\theta^n) \ln \left(\frac{\mathcal{P}(\textbf{X}|\textbf{z},\theta)\mathcal{P}(\textbf{z}|\theta)}{\mathcal{P}(\textbf{z}|\textbf{X},\theta^n)\mathcal{P}(\textbf{X}|\theta^n)}\right) \notag\\
 & \triangleq \Delta (\theta|\theta^n)\end{aligned} $$ 
 
-也就是说，  $$ L(\theta) \geq L(\theta^n) + \Delta (\theta|\theta^n) $$ 
+也就是说，  
+
+$$ L(\theta) \geq L(\theta^n) + \Delta (\theta|\theta^n) $$ 
 
 不妨令，
+
  $$ l(\theta|\theta^n) \triangleq L(\theta^n) + \Delta (\theta|\theta^n) $$ 
  $$ L(\theta) \geq  l(\theta|\theta^n) $$ 
 
-而又有,  $$ \begin{aligned}
+而又有,  
+
+$$ \begin{aligned}
 l(\theta^n|\theta^n) & = L(\theta^n) + \Delta (\theta^n|\theta^n) \\
 & = L(\theta^n) + \sum\limits_{\textbf{z}} \mathcal{P}(\textbf{z}|\textbf{X},\theta^n) \ln \frac{\mathcal{P}(\textbf{X}|\textbf{z},\theta^n)\mathcal{P}(\textbf{z}|\theta^n)}{\mathcal{P}(\textbf{z}|\textbf{X},\theta^n)\mathcal{P}(\textbf{X}|\theta^n)}\\
 & = L(\theta^n) + \sum\limits_{\textbf{z}} \mathcal{P}(\textbf{z}|\textbf{X},\theta^n) \ln \frac{\mathcal{P}(\textbf{X},\textbf{z}|\theta^n)}{\mathcal{P}(\textbf{X},\textbf{z}|\theta^n)}\\
@@ -149,7 +154,9 @@ l(\theta^n|\theta^n) & = L(\theta^n) + \Delta (\theta^n|\theta^n) \\
 
 上面推导了那么多，其实都是为了得出这张图。由 $ L(\theta) \geq  l(\theta|\theta^n) $ ， $ L(\theta) $ 为 $ l(\theta|\theta^n) $ 的上边界。又因为 $ l(\theta^n|\theta^n) = L(\theta^n) $ ，我们知道 $ L(\theta) $ 和 $ l(\theta|\theta^n) $ 在 $ \theta = \theta^n $ 时相等。通过令 $ \theta^{n+1} = \arg \max\limits_{\theta} l(\theta^n|\theta^n) $ ，我们保证了 $ L(\theta) $ 的值在每一步迭代过程中都是增加的。
 
-我们进一步推导下，  $$ \begin{aligned}
+我们进一步推导下，  
+
+$$ \begin{aligned}
 \theta^{n+1} & = \arg \max\limits_{\theta} l(\theta^n|\theta^n)\\
 & = \arg \max\limits_{\theta} \left \{ \sum\limits_{\textbf{z}} \mathcal{P}(\textbf{z}|\textbf{X},\theta^n) \ln \frac{\mathcal{P}(\textbf{X}|\textbf{z},\theta)\mathcal{P}(\textbf{z}|\theta)}{\mathcal{P}(\textbf{z}|\textbf{X},\theta^n)\mathcal{P}(\textbf{X}|\theta^n)} \right \} \\
 & = \arg \max\limits_{\theta} \left \{ \sum\limits_{\textbf{z}} \mathcal{P}(\textbf{z}|\textbf{X},\theta^n) \ln \mathcal{P}(\textbf{X}|\textbf{z},\theta)\mathcal{P}(\textbf{z}|\theta) \right \} \\
@@ -167,6 +174,7 @@ EM算法收敛性
 ============
 
 通过前面的证明，我们很容易得到：
+
  $$ \Delta (\theta^{n+1}|\theta^n) \geq \Delta (\theta^n|\theta^n) = 0 $$ 
 
 这保证了EM算法每一次迭代中， $ L(\theta) $ 都是非减的。但如果 $ \theta_n $ 正好是函数 $ l(\theta|\theta^n) $ 的极大值点呢？此时 $ \theta^{n+1} = \arg \max\limits_{\theta} l(\theta|\theta^n) = \theta_n $ ，迭代终止，算法有可能陷入局部最大值，而得不到全局最优。
