--- a/_posts/2016-01-25-EM.md
+++ b/_posts/2016-01-25-EM.md
@@ -23,9 +23,7 @@ EM 算法
 
 我们通过一个抛硬币的实验和体会下算法的思想。
 
-考虑一个投掷硬币的实验：现在我们有两枚硬币 $ A $ 
-和 $ B $ ，这两枚硬币和普通的硬币不一样，他们投掷出正面的概率和投掷出反面的概率不一定相同。我们将  $ A $  和  $ B $  投掷出正面的概率分别记为  $ \theta_A $  和 $ \theta_B $ 。我们现在独立地做5
-次试验：随机的从这两枚硬币中抽取1 枚，投掷10次，统计出现正面的次数。将结果整理为如下的表格：
+考虑一个投掷硬币的实验：现在我们有两枚硬币 $ A $ 和 $ B $ ，这两枚硬币和普通的硬币不一样，他们投掷出正面的概率和投掷出反面的概率不一定相同。我们将  $ A $  和  $ B $  投掷出正面的概率分别记为  $ \theta_A $  和 $ \theta_B $ 。我们现在独立地做5次试验：随机的从这两枚硬币中抽取1 枚，投掷10次，统计出现正面的次数。将结果整理为如下的表格：
 
 ![image](/assets/EM/bexp.png){width="80.00000%"}
 
@@ -166,9 +164,9 @@ $$ \begin{aligned}
 
 推导至此，EM算法的框架就已经十分清晰了，包含两大步骤：
 
-1.  计算期望： $ E_{\textbf{z}|\textbf{X},\theta_n}\{ \ln \mathcal{P} (\textbf{X},\textbf{z}|\theta)\} $ 
+1. 计算期望： $ E_{\textbf{z}|\textbf{X},\theta_n}\{ \ln \mathcal{P} (\textbf{X},\textbf{z}|\theta)\} $ 
 
-2.  求得使期望最大化的 $ \theta $ 
+2. 求得使期望最大化的 $ \theta $ 
 
 EM算法收敛性
 ============
@@ -186,17 +184,18 @@ EM算法收敛性
 
 下面我们重新回顾下Section \[section:example\]中的例子，
 
-1.  计算期望： $ E_{\textbf{z}|\textbf{X},\theta_n}\{ \ln \mathcal{P} (\textbf{X},\textbf{z}|\theta)\} $ ；
+1. 计算期望： $ E_{\textbf{z}|\textbf{X},\theta_n}\{ \ln \mathcal{P} (\textbf{X},\textbf{z}|\theta)\} $ ；
 
-    可以分为两部分: $ \mathcal{P}(\textbf{z}|\textbf{X},\theta^n) $  和
-     $ \mathcal{P} (\textbf{X},\textbf{z}|\theta) $   $$ \begin{aligned}
-        \mathcal{P}(\textbf{z}|\textbf{X},\theta^n) & = \mathcal{P}(\textbf{z}_1,\textbf{z}_2,\textbf{z}_3,\textbf{z}_4,\textbf{z}_5|\textbf{X}_1,\textbf{X}_2,\textbf{X}_3,\textbf{X}_4,\textbf{X}_5,\theta^n)\\
-        \mathcal{P}(\textbf{z}_i|\textbf{X}_i,\theta^n) & = \frac{\mathcal{P}(\textbf{X}_i|\textbf{z}_i,\theta^n)\mathcal{P}(\textbf{z}_i|\theta^n)}{\mathcal{P}(\textbf{X}_i|\theta^n)}\\
-        & = \frac{\mathcal{P}(\textbf{X}_i|\textbf{z}_i,\theta^n)\mathcal{P}(\textbf{z}_i)}{\sum\limits_{\textbf{z}_i} \mathcal{P}(\textbf{X}_i|\theta^n)}\\
-        & = \frac{(\theta_{z_i}^n)^{H_i}(1-\theta_{z_i}^n)^{T_i}}{\sum\limits_{\textbf{z}_i} (\theta_{z_i}^n)^{H_i}(1-\theta_{z_i}^n)^{T_i}}\ \ (z_i \in \{A,B\})\\
-        \mathcal{P} (\textbf{X}_i,\textbf{z}_i|\theta) & = \mathcal{P} (\textbf{X}_i|\textbf{z}_i,\theta)\mathcal{P}(\textbf{z}_i|\theta)\\
-        & = (\theta_{z_i})^{H_i}(1-\theta_{z_i})^{T_i}
-      \end{aligned} $$ 
+可以分为两部分: $ \mathcal{P}(\textbf{z}|\textbf{X},\theta^n) $  和
+ $ \mathcal{P} (\textbf{X},\textbf{z}|\theta) $  
+$$ \begin{aligned}
+\mathcal{P}(\textbf{z}|\textbf{X},\theta^n) & = \mathcal{P}(\textbf{z}_1,\textbf{z}_2,\textbf{z}_3,\textbf{z}_4,\textbf{z}_5|\textbf{X}_1,\textbf{X}_2,\textbf{X}_3,\textbf{X}_4,\textbf{X}_5,\theta^n)\\
+\mathcal{P}(\textbf{z}_i|\textbf{X}_i,\theta^n) & = \frac{\mathcal{P}(\textbf{X}_i|\textbf{z}_i,\theta^n)\mathcal{P}(\textbf{z}_i|\theta^n)}{\mathcal{P}(\textbf{X}_i|\theta^n)}\\
+& = \frac{\mathcal{P}(\textbf{X}_i|\textbf{z}_i,\theta^n)\mathcal{P}(\textbf{z}_i)}{\sum\limits_{\textbf{z}_i} \mathcal{P}(\textbf{X}_i|\theta^n)}\\
+& = \frac{(\theta_{z_i}^n)^{H_i}(1-\theta_{z_i}^n)^{T_i}}{\sum\limits_{\textbf{z}_i} (\theta_{z_i}^n)^{H_i}(1-\theta_{z_i}^n)^{T_i}}\ \ (z_i \in \{A,B\})\\
+\mathcal{P} (\textbf{X}_i,\textbf{z}_i|\theta) & = \mathcal{P} (\textbf{X}_i|\textbf{z}_i,\theta)\mathcal{P}(\textbf{z}_i|\theta)\\
+& = (\theta_{z_i})^{H_i}(1-\theta_{z_i})^{T_i}
+\end{aligned} $$ 
 
 2.  求得使期望最大化的 $ \theta $ 
 
