--- a/_posts/2016-01-25-EM.md
+++ b/_posts/2016-01-25-EM.md
@@ -186,8 +186,8 @@ EM算法收敛性
 
 1. 计算期望： $ E_{\textbf{z}|\textbf{X},\theta_n}\{ \ln \mathcal{P} (\textbf{X},\textbf{z}|\theta)\} $ ；
 
-可以分为两部分: $ \mathcal{P}(\textbf{z}|\textbf{X},\theta^n) $  和
- $ \mathcal{P} (\textbf{X},\textbf{z}|\theta) $  
+可以分为两部分: $ \mathcal{P}(\textbf{z}|\textbf{X},\theta^n) $  和 $ \mathcal{P} (\textbf{X},\textbf{z}|\theta) $  
+
 $$ \begin{aligned}
 \mathcal{P}(\textbf{z}|\textbf{X},\theta^n) & = \mathcal{P}(\textbf{z}_1,\textbf{z}_2,\textbf{z}_3,\textbf{z}_4,\textbf{z}_5|\textbf{X}_1,\textbf{X}_2,\textbf{X}_3,\textbf{X}_4,\textbf{X}_5,\theta^n)\\
 \mathcal{P}(\textbf{z}_i|\textbf{X}_i,\theta^n) & = \frac{\mathcal{P}(\textbf{X}_i|\textbf{z}_i,\theta^n)\mathcal{P}(\textbf{z}_i|\theta^n)}{\mathcal{P}(\textbf{X}_i|\theta^n)}\\
