--- a/_posts/2016-01-25-EM.md
+++ b/_posts/2016-01-25-EM.md
@@ -60,7 +60,7 @@ $$ \begin{aligned}
 
     比如第一次试验中，如果投掷的是 $ A $ ，那么出现5
     个正面的概率为: $$ C_{10}^5 0.6^5(1-0.6)^5 = 0.20 $$ 如果投掷的是 $ B $ ，那么相应的概率为:
-    
+
      $$ C_{10}^5 0.5^5(1-0.5)^5 = 0.2460 $$ 
 
     也就是掷 $ B $ 的概率高于 $ A $ ，我们可以判定第一次掷的是 $ B $ .
@@ -71,10 +71,7 @@ $$ \begin{aligned}
 
 4.  重复以上步骤，直至 $ \theta $ 收敛。
 
-EM算法的大致思路便是如此，只是在第二步处理上有所不同。它在估计每次实验所抛硬币时，并不直接判定这次抛就是硬币 $ A $ 
-或者 $ B $ ，而是计算出 是 $ A $  或是 $ B $ 
-的概率（也就是 $ Z $ 的分布）；在这个基础上计算似然函数。本篇的最后我们会详细演示计算细节。
-通俗地总结下[^2]：
+EM算法的大致思路便是如此，只是在第二步处理上有所不同。它在估计每次实验所抛硬币时，并不直接判定这次抛就是硬币 $ A $ 或者 $ B $ ，而是计算出 是 $ A $  或是 $ B $ 的概率（也就是 $ Z $ 的分布）；在这个基础上计算似然函数。本篇的最后我们会详细演示计算细节。通俗地总结下[^2]：
 
 简版：猜（E-step）,反思（M-step）,重复；
 
@@ -185,20 +182,20 @@ EM算法收敛性
 
 下面我们重新回顾下Section \[section:example\]中的例子，
 
-1.计算期望： $ E_{\textbf{z}|\textbf{X},\theta_n}\{ \ln \mathcal{P} (\textbf{X},\textbf{z}|\theta)\} $ ；
+1.  计算期望： $ E_{\textbf{z}|\textbf{X},\theta_n}\{ \ln \mathcal{P} (\textbf{X},\textbf{z}|\theta)\} $ ；
 
-可以分为两部分: $ \mathcal{P}(\textbf{z}|\textbf{X},\theta^n) $  和 $ \mathcal{P} (\textbf{X},\textbf{z}|\theta) $  
+    可以分为两部分: $ \mathcal{P}(\textbf{z}|\textbf{X},\theta^n) $  和 $ \mathcal{P} (\textbf{X},\textbf{z}|\theta) $  
 
-$$ \begin{aligned}
-\mathcal{P}(\textbf{z}|\textbf{X},\theta^n) & = \mathcal{P}(\textbf{z}_1,\textbf{z}_2,\textbf{z}_3,\textbf{z}_4,\textbf{z}_5|\textbf{X}_1,\textbf{X}_2,\textbf{X}_3,\textbf{X}_4,\textbf{X}_5,\theta^n)\\
-\mathcal{P}(\textbf{z}_i|\textbf{X}_i,\theta^n) & = \frac{\mathcal{P}(\textbf{X}_i|\textbf{z}_i,\theta^n)\mathcal{P}(\textbf{z}_i|\theta^n)}{\mathcal{P}(\textbf{X}_i|\theta^n)}\\
-& = \frac{\mathcal{P}(\textbf{X}_i|\textbf{z}_i,\theta^n)\mathcal{P}(\textbf{z}_i)}{\sum\limits_{\textbf{z}_i} \mathcal{P}(\textbf{X}_i|\theta^n)}\\
-& = \frac{(\theta_{z_i}^n)^{H_i}(1-\theta_{z_i}^n)^{T_i}}{\sum\limits_{\textbf{z}_i} (\theta_{z_i}^n)^{H_i}(1-\theta_{z_i}^n)^{T_i}}\ \ (z_i \in \{A,B\})\\
-\mathcal{P} (\textbf{X}_i,\textbf{z}_i|\theta) & = \mathcal{P} (\textbf{X}_i|\textbf{z}_i,\theta)\mathcal{P}(\textbf{z}_i|\theta)\\
-& = (\theta_{z_i})^{H_i}(1-\theta_{z_i})^{T_i}
-\end{aligned} $$ 
+    $$ \begin{aligned}
+    \mathcal{P}(\textbf{z}|\textbf{X},\theta^n) & = \mathcal{P}(\textbf{z}_1,\textbf{z}_2,\textbf{z}_3,\textbf{z}_4,\textbf{z}_5|\textbf{X}_1,\textbf{X}_2,\textbf{X}_3,\textbf{X}_4,\textbf{X}_5,\theta^n)\\
+    \mathcal{P}(\textbf{z}_i|\textbf{X}_i,\theta^n) & = \frac{\mathcal{P}(\textbf{X}_i|\textbf{z}_i,\theta^n)\mathcal{P}(\textbf{z}_i|\theta^n)}{\mathcal{P}(\textbf{X}_i|\theta^n)}\\
+    & = \frac{\mathcal{P}(\textbf{X}_i|\textbf{z}_i,\theta^n)\mathcal{P}(\textbf{z}_i)}{\sum\limits_{\textbf{z}_i} \mathcal{P}(\textbf{X}_i|\theta^n)}\\
+    & = \frac{(\theta_{z_i}^n)^{H_i}(1-\theta_{z_i}^n)^{T_i}}{\sum\limits_{\textbf{z}_i} (\theta_{z_i}^n)^{H_i}(1-\theta_{z_i}^n)^{T_i}}\ \ (z_i \in \{A,B\})\\
+    \mathcal{P} (\textbf{X}_i,\textbf{z}_i|\theta) & = \mathcal{P} (\textbf{X}_i|\textbf{z}_i,\theta)\mathcal{P}(\textbf{z}_i|\theta)\\
+    & = (\theta_{z_i})^{H_i}(1-\theta_{z_i})^{T_i}
+    \end{aligned} $$ 
 
-2. 求得使期望最大化的 $ \theta $ 
+2.  求得使期望最大化的 $ \theta $ 
 
 <span>99</span> [What is the expectation maximization
 algorithm?](http://ai.stanford.edu/~chuongdo/papers/em_tutorial.pdf)
