--- a/_posts/2016-01-25-EM.md
+++ b/_posts/2016-01-25-EM.md
@@ -195,9 +195,9 @@ $$ \begin{aligned}
 & = (\theta_{z_i})^{H_i}(1-\theta_{z_i})^{T_i}
 \end{aligned} $$ 
 
-2.  求得使期望最大化的 $ \theta $ 
+求得使期望最大化的 $ \theta $ 
 
-<span>99</span> [What is the expectation maximization
+<!-- <span>99</span> [What is the expectation maximization
 algorithm?](http://ai.stanford.edu/~chuongdo/papers/em_tutorial.pdf)
 [从最大似然到EM算法浅解](http://blog.csdn.net/zouxy09/article/details/8537620)
 [The EM
@@ -205,7 +205,7 @@ Algorithm](http://www.cnblogs.com/jerrylead/archive/2011/04/06/2006936.html)
 [Expectation
 Maximation(EM)算法](http://blog.csdn.net/binary_search/article/details/8206251)
 [What is an intuitive explanation for the expectation maximization
-algorithm?](https://www.quora.com/What-is-an-intuitive-explanation-for-the-expectation-maximization-EM-algorithm)
+algorithm?](https://www.quora.com/What-is-an-intuitive-explanation-for-the-expectation-maximization-EM-algorithm) -->
 
 [^1]: 这一步相当于估计出隐藏变量 $ Z $ 的分布
 
