--- a/_posts/2016-01-25-EM.md
+++ b/_posts/2016-01-25-EM.md
@@ -6,9 +6,6 @@ categories: 机器学习
 tags: 机器学习 EM算法
 ---
 
-EM 算法
-=======
-
 1.1 简介
 ----
 
@@ -182,7 +179,20 @@ EM算法收敛性
 
 下面我们重新回顾下Section \[section:example\]中的例子，
 
+计算期望：$ E_{\textbf{z}|\textbf{X},\theta_n}\{ \ln \mathcal{P} (\textbf{X},\textbf{z}|\theta)\} $ ；
 
+可以分为两部分: $ \mathcal{P}(\textbf{z}|\textbf{X},\theta^n) $  和 $ \mathcal{P} (\textbf{X},\textbf{z}|\theta) $  
+
+$$ \begin{aligned}
+\mathcal{P}(\textbf{z}|\textbf{X},\theta^n) & = \mathcal{P}(\textbf{z}_1,\textbf{z}_2,\textbf{z}_3,\textbf{z}_4,\textbf{z}_5|\textbf{X}_1,\textbf{X}_2,\textbf{X}_3,\textbf{X}_4,\textbf{X}_5,\theta^n)\\
+\mathcal{P}(\textbf{z}_i|\textbf{X}_i,\theta^n) & = \frac{\mathcal{P}(\textbf{X}_i|\textbf{z}_i,\theta^n)\mathcal{P}(\textbf{z}_i|\theta^n)}{\mathcal{P}(\textbf{X}_i|\theta^n)}\\
+& = \frac{\mathcal{P}(\textbf{X}_i|\textbf{z}_i,\theta^n)\mathcal{P}(\textbf{z}_i)}{\sum\limits_{\textbf{z}_i} \mathcal{P}(\textbf{X}_i|\theta^n)}\\
+& = \frac{(\theta_{z_i}^n)^{H_i}(1-\theta_{z_i}^n)^{T_i}}{\sum\limits_{\textbf{z}_i} (\theta_{z_i}^n)^{H_i}(1-\theta_{z_i}^n)^{T_i}}\ \ (z_i \in \{A,B\})\\
+\mathcal{P} (\textbf{X}_i,\textbf{z}_i|\theta) & = \mathcal{P} (\textbf{X}_i|\textbf{z}_i,\theta)\mathcal{P}(\textbf{z}_i|\theta)\\
+& = (\theta_{z_i})^{H_i}(1-\theta_{z_i})^{T_i}
+\end{aligned} $$ 
+
+求得使期望最大化的 $ \theta $ 
 
 <!-- <span>99</span> [What is the expectation maximization
 algorithm?](http://ai.stanford.edu/~chuongdo/papers/em_tutorial.pdf)
