--- a/_posts/2016-01-25-EM.md
+++ b/_posts/2016-01-25-EM.md
@@ -155,7 +155,7 @@ $$ \begin{aligned}
 & = \arg \max\limits_{\theta} \left \{ \sum\limits_{\textbf{z}} \mathcal{P}(\textbf{z}|\textbf{X},\theta^n) \ln \mathcal{P}(\textbf{X}|\textbf{z},\theta)\mathcal{P}(\textbf{z}|\theta) \right \} \\
 & = \arg \max\limits_{\theta} \left \{ \sum\limits_{\textbf{z}} \mathcal{P}(\textbf{z}|\textbf{X},\theta^n) \ln \frac{\mathcal{P}(\textbf{X},\textbf{z},\theta)}{\mathcal{P}(\textbf{z},\theta)}\frac{\mathcal{P}(\textbf{z},\theta)}{\mathcal{P}(\theta)} \right \}\\
 & = \arg \max\limits_{\theta} \left \{ \sum\limits_{\textbf{z}} \mathcal{P}(\textbf{z}|\textbf{X},\theta^n) \ln \mathcal{P}(\textbf{X},\textbf{z}|\theta) \right \}\\
-& =  \underbrace{\arg \max\limits_{\theta}}_{\textcolor[rgb]{1.00,0.00,0.00}{M-step}} \underbrace{\vphantom{\arg \max\limits_{\theta}}\left \{ E_{\textbf{z}|\textbf{X},\theta_n}\{ \ln \mathcal{P} (\textbf{X},\textbf{z}|\theta) \}\right \}}_{\textcolor[rgb]{1.00,0.00,0.00}{E-step}}\end{aligned} $$ 
+& =  \underbrace{\arg \max\limits_{\theta}}_{M-step} \underbrace{\vphantom{\arg \max\limits_{\theta}}\left \{ E_{\textbf{z}|\textbf{X},\theta_n}\{ \ln \mathcal{P} (\textbf{X},\textbf{z}|\theta) \}\right \}}_{E-step}\end{aligned} $$ 
 
 推导至此，EM算法的框架就已经十分清晰了，包含两大步骤：
 
