--- a/_posts/2016-01-25-EM.md
+++ b/_posts/2016-01-25-EM.md
@@ -70,16 +70,16 @@ $$ \begin{aligned}
 
 EM算法的大致思路便是如此，只是在第二步处理上有所不同。它在估计每次实验所抛硬币时，并不直接判定这次抛就是硬币 $ A $ 或者 $ B $ ，而是计算出 是 $ A $  或是 $ B $ 的概率（也就是 $ Z $ 的分布）；在这个基础上计算似然函数。本篇的最后我们会详细演示计算细节。通俗地总结下[^2]：
 
-简版：猜（E-step）,反思（M-step）,重复；
+>简版：猜（E-step）,反思（M-step）,重复；
 
-啰嗦版：你知道一些东西（观察的到的数据），
-你不知道一些东西（隐藏变量），你很好奇，想知道点那些不了解的东西。怎么办呢？
+    啰嗦版：你知道一些东西（观察的到的数据），
+    你不知道一些东西（隐藏变量），你很好奇，想知道点那些不了解的东西。怎么办呢？
 
-你根据一些假设（parameter）先猜（E-step），把那些不知道的东西都猜出来，假装你全都知道了;
+    你根据一些假设（parameter）先猜（E-step），把那些不知道的东西都猜出来，假装你全都知道了;
 
-然后有了这些猜出来的数据，你反思一下，更新一下你的假设（parameter）,
-让你观察到的数据更加可能(Maximize likelihood; M-step);
-然后再猜，再反思，最后，你就得到了一个可以解释整个数据的假设了。
+    然后有了这些猜出来的数据，你反思一下，更新一下你的假设（parameter）,
+    让你观察到的数据更加可能(Maximize likelihood; M-step);
+    然后再猜，再反思，最后，你就得到了一个可以解释整个数据的假设了。
 
 那么为什么这种方法行得通呢？有没有失效的时候呢？迭代是否一定会收敛呢？这就需要严格的数学证明了。
 
@@ -158,9 +158,7 @@ $$ \begin{aligned}
 & =  \underbrace{\arg \max\limits_{\theta}}_{M-step} \underbrace{\vphantom{\arg \max\limits_{\theta}}\left \{ E_{\textbf{z}|\textbf{X},\theta_n}\{ \ln \mathcal{P} (\textbf{X},\textbf{z}|\theta) \}\right \}}_{E-step}\end{aligned} $$ 
 
 推导至此，EM算法的框架就已经十分清晰了，包含两大步骤：
-
 1. 计算期望： $ E_{\textbf{z}|\textbf{X},\theta_n}\{ \ln \mathcal{P} (\textbf{X},\textbf{z}|\theta)\} $ 
-
 2. 求得使期望最大化的 $ \theta $ 
 
 EM算法收敛性
@@ -201,6 +199,7 @@ Maximation(EM)算法](http://blog.csdn.net/binary_search/article/details/8206251
 [What is an intuitive explanation for the expectation maximization
 algorithm?](https://www.quora.com/What-is-an-intuitive-explanation-for-the-expectation-maximization-EM-algorithm) -->
 
+------------
 [^1]: 这一步相当于估计出隐藏变量 $ Z $ 的分布
 
 [^2]: [怎么通俗易懂地解释EM算法](https://www.zhihu.com/question/27976634)
