--- a/_posts/2016-01-25-EM.md
+++ b/_posts/2016-01-25-EM.md
@@ -106,7 +106,9 @@ L(\theta) - L(\theta^n) & = \ln \mathcal{P}(\textbf{X}|\theta) - \ln \mathcal{P}
 
 ![image](/assets/EM/JI.png){width="90.00000%"}
 
-因为 $ \ln(x) $ 为严格的单调递增函数，根据Jensen不等式，有，  $$ \label{em2}
+因为 $ \ln(x) $ 为严格的单调递增函数，根据Jensen不等式，有，  
+
+$$ \label{em2}
   \ln \sum\limits_{i=1}^n \lambda_i x_i \geq \sum\limits_{i=1}^n \ln(x_i) $$ 
 
 又因为，  $$ \begin{aligned}
@@ -126,6 +128,7 @@ L(\theta) - L(\theta^n) &= \ln \sum\limits_{\textbf{z}} \mathcal{P}(\textbf{z}|\
 $$ L(\theta) \geq L(\theta^n) + \Delta (\theta|\theta^n) $$ 
 
 不妨令，
+
 $$ l(\theta|\theta^n) \triangleq L(\theta^n) + \Delta (\theta|\theta^n) $$ 
 $$ L(\theta) \geq  l(\theta|\theta^n) $$ 
 
