--- a/_posts/2016-01-25-EM.md
+++ b/_posts/2016-01-25-EM.md
@@ -111,7 +111,9 @@ L(\theta) - L(\theta^n) & = \ln \mathcal{P}(\textbf{X}|\theta) - \ln \mathcal{P}
 $$ \label{em2}
   \ln \sum\limits_{i=1}^n \lambda_i x_i \geq \sum\limits_{i=1}^n \ln(x_i) $$ 
 
-又因为，  $$ \begin{aligned}
+又因为，  
+
+$$ \begin{aligned}
 \sum\limits_{\textbf{z}} \mathcal{P}(\textbf{z}|\textbf{X},\theta^n) & = 1\\
 \mathcal{P}(\textbf{z}|\textbf{X},\theta^n) & \geq 0\end{aligned} $$ 
 
@@ -130,6 +132,7 @@ $$ L(\theta) \geq L(\theta^n) + \Delta (\theta|\theta^n) $$
 不妨令，
 
 $$ l(\theta|\theta^n) \triangleq L(\theta^n) + \Delta (\theta|\theta^n) $$ 
+
 $$ L(\theta) \geq  l(\theta|\theta^n) $$ 
 
 而又有,  
