--- a/_posts/2016-01-25-EM.md
+++ b/_posts/2016-01-25-EM.md
@@ -118,6 +118,7 @@ $$ \begin{aligned}
 \mathcal{P}(\textbf{z}|\textbf{X},\theta^n) & \geq 0\end{aligned} $$ 
 
 我们要化简的是式\[em1\]，这个时候可以将 $ \mathcal{P}(\textbf{z}|\textbf{X},\theta^n) $ 看做式\[em2\]中的 $ \lambda_i $ ， $ \frac{\mathcal{P}(\textbf{X}|\textbf{z},\theta)\mathcal{P}(\textbf{z}|\theta)}{\mathcal{P}(\textbf{z}|\textbf{X},\theta^n)} $ 看做式\[em2\]中的 $ x_i $ ，则有：
+
  $$ \begin{aligned}
 L(\theta) - L(\theta^n) &= \ln \sum\limits_{\textbf{z}} \mathcal{P}(\textbf{z}|\textbf{X},\theta^n)\left(\frac{\mathcal{P}(\textbf{X}|\textbf{z},\theta)\mathcal{P}(\textbf{z}|\theta)}{\mathcal{P}(\textbf{z}|\textbf{X},\theta^n)}\right) - \ln \mathcal{P}(\textbf{X}|\theta^n) \notag\\
 & \geq \sum\limits_{\textbf{z}} \mathcal{P}(\textbf{z}|\textbf{X},\theta^n) \ln \left(\frac{\mathcal{P}(\textbf{X}|\textbf{z},\theta)\mathcal{P}(\textbf{z}|\theta)}{\mathcal{P}(\textbf{z}|\textbf{X},\theta^n)}\right) - \ln \mathcal{P}(\textbf{X}|\theta^n) \notag\\
@@ -144,7 +145,8 @@ l(\theta^n|\theta^n) & = L(\theta^n) + \Delta (\theta^n|\theta^n) \\
 & = L(\theta^n) + \sum\limits_{\textbf{z}} \mathcal{P}(\textbf{z}|\textbf{X},\theta^n) \ln 1 \\
 & = L(\theta^n)\end{aligned} $$ 
 
-![image](/assets/EM/its.png){width="90.00000%"}
+![image](/assets/EM/its.png){width="90.%"}
+
 
 上面推导了那么多，其实都是为了得出这张图。由 $ L(\theta) \geq  l(\theta|\theta^n) $ ， $ L(\theta) $ 为 $ l(\theta|\theta^n) $ 的上边界。又因为 $ l(\theta^n|\theta^n) = L(\theta^n) $ ，我们知道 $ L(\theta) $ 和 $ l(\theta|\theta^n) $ 在 $ \theta = \theta^n $ 时相等。通过令 $ \theta^{n+1} = \arg \max\limits_{\theta} l(\theta^n|\theta^n) $ ，我们保证了 $ L(\theta) $ 的值在每一步迭代过程中都是增加的。
 
