--- a/_posts/2016-01-25-EM.md
+++ b/_posts/2016-01-25-EM.md
@@ -145,7 +145,7 @@ l(\theta^n|\theta^n) & = L(\theta^n) + \Delta (\theta^n|\theta^n) \\
 & = L(\theta^n) + \sum\limits_{\textbf{z}} \mathcal{P}(\textbf{z}|\textbf{X},\theta^n) \ln 1 \\
 & = L(\theta^n)\end{aligned} $$ 
 
-![image](/assets/EM/its.png){width="90.%"}
+![image](/assets/EM/its.png)
 
 
 上面推导了那么多，其实都是为了得出这张图。由 $ L(\theta) \geq  l(\theta|\theta^n) $ ， $ L(\theta) $ 为 $ l(\theta|\theta^n) $ 的上边界。又因为 $ l(\theta^n|\theta^n) = L(\theta^n) $ ，我们知道 $ L(\theta) $ 和 $ l(\theta|\theta^n) $ 在 $ \theta = \theta^n $ 时相等。通过令 $ \theta^{n+1} = \arg \max\limits_{\theta} l(\theta^n|\theta^n) $ ，我们保证了 $ L(\theta) $ 的值在每一步迭代过程中都是增加的。
