--- a/_posts/2016-01-25-EM.md
+++ b/_posts/2016-01-25-EM.md
@@ -168,9 +168,10 @@ EM算法收敛性
 
 通过前面的证明，我们很容易得到：
 
- $$ \Delta (\theta^{n+1}|\theta^n) \geq \Delta (\theta^n|\theta^n) = 0 $$ 
+$$ \Delta (\theta^{n+1}|\theta^n) \geq \Delta (\theta^n|\theta^n) = 0 $$ 
 
-这保证了EM算法每一次迭代中， $ L(\theta) $ 都是非减的。但如果 $ \theta_n $ 正好是函数 $ l(\theta|\theta^n) $ 的极大值点呢？此时 $ \theta^{n+1} = \arg \max\limits_{\theta} l(\theta|\theta^n) = \theta_n $ ，迭代终止，算法有可能陷入局部最大值，而得不到全局最优。
+这保证了EM算法每一次迭代中， $ L(\theta) $ 都是非减的。但如果 $ \theta_n $ 正好是函数 $ l(\theta|\theta^n) $ 的极大值点呢？此时 
+$ \theta^{n+1} = \arg \max\limits_{\theta} l(\theta|\theta^n) = \theta_n $ ，迭代终止，算法有可能陷入局部最大值，而得不到全局最优。
 
 ![image](/assets/EM/maxmin.png){width="40.00000%"}
 
@@ -178,7 +179,7 @@ EM算法收敛性
 ========
 
 下面我们重新回顾下Section \[section:example\]中的例子，
-1. 计算期望：$ E_{\textbf{z}|\textbf{X},\theta_n}\{ \ln \mathcal{P} (\textbf{X},\textbf{z}|\theta)\} $ ；
+* 计算期望：$ E_{\textbf{z}|\textbf{X},\theta_n}\{ \ln \mathcal{P} (\textbf{X},\textbf{z}|\theta)\} $ ；
 可以分为两部分: $ \mathcal{P}(\textbf{z}|\textbf{X},\theta^n) $  和 $ \mathcal{P} (\textbf{X},\textbf{z}|\theta) $  
 
 $$ \begin{aligned}
@@ -190,7 +191,7 @@ $$ \begin{aligned}
 & = (\theta_{z_i})^{H_i}(1-\theta_{z_i})^{T_i}
 \end{aligned} $$ 
 
-2. 求得使期望最大化的 $ \theta $ 
+* 求得使期望最大化的 $ \theta $ 
 
 <!-- <span>99</span> [What is the expectation maximization
 algorithm?](http://ai.stanford.edu/~chuongdo/papers/em_tutorial.pdf)
