--- a/_posts/2016-01-25-EM.md
+++ b/_posts/2016-01-25-EM.md
@@ -170,7 +170,7 @@ EM算法收敛性
 
 $$ \Delta (\theta^{n+1}|\theta^n) \geq \Delta (\theta^n|\theta^n) = 0 $$ 
 
-这保证了EM算法每一次迭代中， $ L(\theta) $ 都是非减的。但如果 $ \theta_n $ 正好是函数 $l(\theta|\theta^n)$ 的极大值点呢？此时 
+这保证了EM算法每一次迭代中， $ L(\theta) $ 都是非减的。但如果 $ \theta_n $ 正好是函数 $l(\theta\|\theta^n)$ 的极大值点呢？此时 
 $\theta^{n+1} = \arg \max\limits_{\theta} l(\theta|\theta^n) = \theta_n$ ，迭代终止，算法有可能陷入局部最大值，而得不到全局最优。
 
 ![image](/assets/EM/maxmin.png){width="40.00000%"}
