--- a/_posts/2016-01-25-EM.md
+++ b/_posts/2016-01-25-EM.md
@@ -170,8 +170,7 @@ EM算法收敛性
 
 $$ \Delta (\theta^{n+1}|\theta^n) \geq \Delta (\theta^n|\theta^n) = 0 $$ 
 
-这保证了EM算法每一次迭代中， $ L(\theta) $ 都是非减的。但如果 $ \theta_n $ 正好是函数 $l(\theta\|\theta^n)$ 的极大值点呢？此时 
-$\theta^{n+1} = \arg \max\limits_{\theta} l(\theta\|\theta^n) = \theta_n$ ，迭代终止，算法有可能陷入局部最大值，而得不到全局最优。
+这保证了EM算法每一次迭代中， $ L(\theta) $ 都是非减的。但如果 $ \theta_n $ 正好是函数 $l(\theta\|\theta^n)$ 的极大值点呢？此时 $\theta^{n+1} = \arg \max\limits_{\theta} l(\theta\|\theta^n) = \theta_n$ ，迭代终止，算法有可能陷入局部最大值，而得不到全局最优。
 
 ![image](/assets/EM/maxmin.png){width="40.00000%"}
 
@@ -180,8 +179,8 @@ $\theta^{n+1} = \arg \max\limits_{\theta} l(\theta\|\theta^n) = \theta_n$ ，迭
 
 下面我们重新回顾下Section \[section:example\]中的例子，
 
-* 计算期望：$ E_{\textbf{z}|\textbf{X},\theta_n}\{ \ln \mathcal{P} (\textbf{X},\textbf{z}|\theta)\} $ ；
- 可以分为两部分: $ \mathcal{P}(\textbf{z}|\textbf{X},\theta^n) $  和 $ \mathcal{P} (\textbf{X},\textbf{z}|\theta) $  
+* 计算期望：$ E_{\textbf{z}\|\textbf{X},\theta_n}\{ \ln \mathcal{P} (\textbf{X},\textbf{z}\|\theta)\} $ ；
+ 可以分为两部分: $ \mathcal{P}(\textbf{z}\|\textbf{X},\theta^n) $  和 $ \mathcal{P} (\textbf{X},\textbf{z}\|\theta) $  
 
 $$ \begin{aligned}
 \mathcal{P}(\textbf{z}|\textbf{X},\theta^n) & = \mathcal{P}(\textbf{z}_1,\textbf{z}_2,\textbf{z}_3,\textbf{z}_4,\textbf{z}_5|\textbf{X}_1,\textbf{X}_2,\textbf{X}_3,\textbf{X}_4,\textbf{X}_5,\theta^n)\\
