--- a/_posts/2016-01-25-EM.md
+++ b/_posts/2016-01-25-EM.md
@@ -22,7 +22,7 @@ tags: 机器学习 EM算法
 
 考虑一个投掷硬币的实验：现在我们有两枚硬币 $ A $ 和 $ B $ ，这两枚硬币和普通的硬币不一样，他们投掷出正面的概率和投掷出反面的概率不一定相同。我们将  $ A $  和  $ B $  投掷出正面的概率分别记为  $ \theta_A $  和 $ \theta_B $ 。我们现在独立地做5次试验：随机的从这两枚硬币中抽取1 枚，投掷10次，统计出现正面的次数。将结果整理为如下的表格：
 
-![image](/assets/EM/bexp.png){width="80.00000%"}
+![image](/assets/EM/bexp.png)
 
 我们记录下两组随机变量 $ X = (X_1,X_2,X_3,X_4,X_5) $ 和 $ Z =(Z_1,Z_2,Z_3,Z_4,Z_5) $ ，其中 $ X_i\in \{0,1,2,3,4,5,6,7,8,9,10\} $ 
 代表试验 $ i $  中出现 正面的次数， $ Z_i \in \{A,B\} $ 
@@ -45,7 +45,7 @@ $$ \begin{aligned}
 
 我们将这个问题稍微改变一下：假设我们现在只知道每次试验有几次投掷出正面，但是不知道每次试验投掷的是哪枚硬币。这个时候我们就称 $ Z $  为(Hidden Variable)， $ X $ 称为观察变量(Observed Variable)。当我们再来估计参数 $ \theta_A $ 和 $ \theta_B $ 时，数据就不够完整了。传统的极大似然估计很难解决，轮到EM算法上台展现了。
 
-![image](/assets/EM/EM.png){width="80%"}
+![image](/assets/EM/EM.png)
 
 怎么玩呢？
 
@@ -104,7 +104,7 @@ L(\theta) - L(\theta^n) & = \ln \mathcal{P}(\textbf{X}|\theta) - \ln \mathcal{P}
 
 这个时候我们需要利用下著名的Jensen不等式[^3]：
 
-![image](/assets/EM/JI.png){width="90.00000%"}
+![image](/assets/EM/JI.png)
 
 因为 $ \ln(x) $ 为严格的单调递增函数，根据Jensen不等式，有，  
 
