--- a/_posts/2016-01-25-EM.md
+++ b/_posts/2016-01-25-EM.md
@@ -53,8 +53,7 @@ $$ \begin{aligned}
 
 2.  然后基于这组 $ \theta $ 值估计每一次实验更有可能抛的哪一枚硬币。
 
-    比如第一次试验中，如果投掷的是 $ A $ ，那么出现5
-    个正面的概率为: $$ C_{10}^5 0.6^5(1-0.6)^5 = 0.20 $$ 如果投掷的是 $ B $ ，那么相应的概率为:
+    比如第一次试验中，如果投掷的是 $ A $ ，那么出现5个正面的概率为: $$ C_{10}^5 0.6^5(1-0.6)^5 = 0.20 $$ 如果投掷的是 $ B $ ，那么相应的概率为:
 
      $$ C_{10}^5 0.5^5(1-0.5)^5 = 0.2460 $$ 
 
