--- a/_posts/2016-01-25-EM.md
+++ b/_posts/2016-01-25-EM.md
@@ -76,8 +76,8 @@ EM算法的大致思路便是如此，只是在第二步处理上有所不同。
 
 那么为什么这种方法行得通呢？有没有失效的时候呢？迭代是否一定会收敛呢？这就需要严格的数学证明了。
 
-EM算法推导
-==========
+2.1 EM算法推导
+------
 
 我们先写出似然函数表达式，：  
 
@@ -160,8 +160,8 @@ $$ \begin{aligned}
 1. 计算期望： $ E_{\textbf{z}|\textbf{X},\theta_n}\{ \ln \mathcal{P} (\textbf{X},\textbf{z}|\theta)\} $ 
 2. 求得使期望最大化的 $ \theta $ 
 
-EM算法收敛性
-============
+2.2 EM算法收敛性
+------
 
 通过前面的证明，我们很容易得到：
 
@@ -171,8 +171,8 @@ $$ \Delta (\theta^{n+1}|\theta^n) \geq \Delta (\theta^n|\theta^n) = 0 $$
 
 ![image](/assets/EM/maxmin.png)
 
-例子演算
-========
+2.3 例子演算
+------
 
 下面我们重新回顾下Section \[section:example\]中的例子，
 
@@ -188,7 +188,7 @@ $$ \begin{aligned}
 & = (\theta_{z_i})^{H_i}(1-\theta_{z_i})^{T_i}
 \end{aligned} $$ 
 
-* 求得使期望最大化的 $ \theta $ 
+* 求得使期望最大化的 $ \theta $ .
 
 <!-- <span>99</span> [What is the expectation maximization
 algorithm?](http://ai.stanford.edu/~chuongdo/papers/em_tutorial.pdf)
