--- a/_posts/2016-01-25-EM.md
+++ b/_posts/2016-01-25-EM.md
@@ -23,12 +23,9 @@ tags: 机器学习 EM算法
 
 ![image](/assets/EM/bexp.png)
 
-我们记录下两组随机变量 $ X = (X_1,X_2,X_3,X_4,X_5) $ 和 $ Z =(Z_1,Z_2,Z_3,Z_4,Z_5) $ ，其中 $ X_i\in \{0,1,2,3,4,5,6,7,8,9,10\} $ 
-代表试验 $ i $  中出现 正面的次数， $Z_i \in \{A,B\}$ 代表这次试验投掷的是硬币 $ A $  还是硬币 $ B $ 。
+我们记录下两组随机变量 $ X = (X_1,X_2,X_3,X_4,X_5) $ 和 $ Z =(Z_1,Z_2,Z_3,Z_4,Z_5) $ ，其中 $ X_i\in \{0,1,2,3,4,5,6,7,8,9,10\} $ 代表试验 $ i $  中出现 正面的次数， $Z_i \in \{A,B\}$ 代表这次试验投掷的是硬币 $ A $  还是硬币 $ B $ 。
 
-我们的目标是根据实验结果来估计参数 $ \theta =(\theta_A,\theta_B) $ 。
-这个实验中的参数估计就是有的参数估计，这个是因为我们不仅知道每次试验中投掷出正面的次数，我们还知道每次试验中投掷的是硬币 $ A $ 
-还是 $ B $ 。  
+我们的目标是根据实验结果来估计参数 $ \theta =(\theta_A,\theta_B) $ 。这个实验中的参数估计就是有的参数估计，这个是因为我们不仅知道每次试验中投掷出正面的次数，我们还知道每次试验中投掷的是硬币 $ A $ 还是 $ B $ 。  
 
 $$ \begin{aligned}
   L(\theta) & = P(X,Z|\theta)\\
