--- a/_posts/2016-01-25-EM.md
+++ b/_posts/2016-01-25-EM.md
@@ -19,11 +19,11 @@ tags: 机器学习 EM算法
 
 我们通过一个抛硬币的实验和体会下算法的思想。
 
-考虑一个投掷硬币的实验：现在我们有两枚硬币 $ A $ 和 $ B $ ，这两枚硬币和普通的硬币不一样，他们投掷出正面的概率和投掷出反面的概率不一定相同。我们将  $ A $  和  $ B $  投掷出正面的概率分别记为  $ \theta_A $  和 $ \theta_B $ 。我们现在独立地做5次试验：随机的从这两枚硬币中抽取1 枚，投掷10次，统计出现正面的次数。将结果整理为如下的表格：
+考虑一个投掷硬币的实验：现在我们有两枚硬币 $ A $ 和 $ B $ ，这两枚硬币和普通的硬币不一样，他们投掷出正面的概率和投掷出反面的概率不一定相同。我们将  $ A $  和  $ B $  投掷出正面的概率分别记为  $ \theta_A $  和 $ \theta_B $ 。现在独立地做5次试验：随机的从这两枚硬币中抽取1 枚，投掷10次，统计出现正面的次数。将结果整理为如下的表格：
 
 ![image](/assets/EM/bexp.png)
 
-我们记录下两组随机变量 $ X = (X_1,X_2,X_3,X_4,X_5) $ 和 $ Z =(Z_1,Z_2,Z_3,Z_4,Z_5) $ ，其中 $ X_i\in \{0,1,2,3,4,5,6,7,8,9,10\} $ 代表试验 $ i $  中出现 正面的次数， $Z_i \in \{A,B\}$ 代表这次试验投掷的是硬币 $ A $  还是硬币 $ B $ 。
+我们记录下两组随机变量 $ X = (X_1,X_2,X_3,X_4,X_5) $ 和 $ Z =(Z_1,Z_2,Z_3,Z_4,Z_5) $ ，其中 $ X_i\in {0,1,2,3,4,5,6,7,8,9,10} $ 代表试验 $ i $  中出现 正面的次数， $Z_i \in \{A,B\}$ 代表这次试验投掷的是硬币 $ A $  还是硬币 $ B $ 。
 
 我们的目标是根据实验结果来估计参数 $ \theta =(\theta_A,\theta_B) $ 。这个实验中的参数估计就是有完整数据的参数估计，这个是因为我们不仅知道每次试验中投掷出正面的次数，我们还知道每次试验中投掷的是硬币 $ A $ 还是 $ B $ 。  
 
