--- a/_posts/2016-01-25-EM.md
+++ b/_posts/2016-01-25-EM.md
@@ -46,7 +46,9 @@ $$ \begin{aligned}
 
 一个基本的思路是：
 
-1.  首先我们给 $ \theta $ 赋一组初始值。（初始值我们可以通过经验或专门的算法得到，这里不做展开） $$ \hat{\theta}_A^{(0)} = 0.60, \hat{\theta}_B^{(0)} = 0.50 $$ 
+1.  首先我们给 $ \theta $ 赋一组初始值。（初始值我们可以通过经验或专门的算法得到，这里不做展开） 
+    
+    $$ \hat{\theta}_A^{(0)} = 0.60, \hat{\theta}_B^{(0)} = 0.50 $$ 
 
 2.  然后基于这组 $ \theta $ 值估计每一次实验更有可能抛的哪一枚硬币。
 
