--- a/_posts/2015-07-29-EM.md
+++ b/_posts/2015-07-29-EM.md
@@ -2,9 +2,9 @@
 published: true
 author: Charles
 layout: post
-title:  "实际问题中如何使用机器学习模型"
+title:  "EM算法：由浅入深"
 date:   2015-07-29 23:22
-categories: 实际问题 机器学习 特征工程 美团
+categories: 机器学习
 ---
 
 1.1 简介
