--- a/_posts/2015-07-29-EM.md
+++ b/_posts/2015-07-29-EM.md
@@ -7,13 +7,11 @@ date:   2015-07-29 23:22
 categories: 机器学习
 ---
 
-1.1 简介
-----
+#### 简介
 
 期望最大化(ExpectationMaximization)算法最初是由 Ceppellini\[2\]等人1950年在讨论基因频率的估计的时候提出的。后来又被Hartley\[3\]和Baum\[4\]等人发展的更加广泛。目前引用的较多的是1977年Dempster\[5\]等人的工作。它主要用于从不完整数据中计算最大似然估计。后来经过其他学者的发展，这个算法也被用于聚类等应用。
 
-1.2 最大似然估计
-------------
+#### 最大似然估计
 
 重复强调下，EM算法主要用于从不完整数据中计算最大似然估计，本身可以看成是特殊情况下计算极大似然的一种方法。
 
@@ -37,8 +35,7 @@ $$ \begin{aligned}
 
 而， $ \hat{\theta} = \arg\max\limits_{\theta} L(\theta) $ ，易求得， $ \hat{\theta}_A = 0.8,\hat{\theta}_B = 0.45 $ 。这就是我们一直所熟知的极大似然估计。
 
-1.3 EM算法 {#section:example}
-------
+#### EM算法 {#section:example}
 
 我们将这个问题稍微改变一下：假设我们现在只知道每次试验有几次投掷出正面，但是不知道每次试验投掷的是哪枚硬币。这个时候我们就称 $ Z $  为(Hidden Variable)， $ X $ 称为观察变量(Observed Variable)。当我们再来估计参数 $ \theta_A $ 和 $ \theta_B $ 时，数据就不够完整了。传统的极大似然估计很难解决，轮到EM算法上台展现了。
 
@@ -68,17 +65,16 @@ $$ \begin{aligned}
 
 EM算法的大致思路便是如此，只是在第二步处理上有所不同。它在估计每次实验所抛硬币时，并不直接判定这次抛就是硬币 $ A $ 或者 $ B $ ，而是计算出 是 $ A $  或是 $ B $ 的概率（也就是 $ Z $ 的分布）；在这个基础上计算似然函数。本篇的最后我们会详细演示计算细节。通俗地总结下[^2]：
 
->简版：猜（E-step）,反思（M-step）,重复；
-啰嗦版：你知道一些东西（观察的到的数据），你不知道一些东西（隐藏变量），你很好奇，想知道点那些不了解的东西。怎么办呢？
-你根据一些假设（parameter）先猜（E-step），把那些不知道的东西都猜出来，假装你全都知道了;
-然后有了这些猜出来的数据，你反思一下，更新一下你的假设（parameter）,
-让你观察到的数据更加可能(Maximize likelihood; M-step);
-然后再猜，再反思，最后，你就得到了一个可以解释整个数据的假设了。
+> 简版：猜（E-step）,反思（M-step）,重复；   
+啰嗦版：你知道一些东西（观察的到的数据），你不知道一些东西（隐藏变量），你很好奇，想知道点那些不了解的东西。怎么办呢？     
+你根据一些假设（parameter）先猜（E-step），把那些不知道的东西都猜出来，假装你全都知道了;      
+然后有了这些猜出来的数据，你反思一下，更新一下你的假设（parameter）,   
+让你观察到的数据更加可能(Maximize likelihood; M-step);    
+然后再猜，再反思，最后，你就得到了一个可以解释整个数据的假设了。      
 
 那么为什么这种方法行得通呢？有没有失效的时候呢？迭代是否一定会收敛呢？这就需要严格的数学证明了。
 
-2.1 EM算法推导
-------
+#### EM算法推导
 
 我们先写出似然函数表达式，：  
 
@@ -161,8 +157,7 @@ $$ \begin{aligned}
 1. 计算期望： $ E_{\textbf{z}|\textbf{X},\theta_n}\{ \ln \mathcal{P} (\textbf{X},\textbf{z}|\theta)\} $ 
 2. 求得使期望最大化的 $ \theta $ 
 
-2.2 EM算法收敛性
-------
+#### EM算法收敛性
 
 通过前面的证明，我们很容易得到：
 
@@ -172,8 +167,7 @@ $$ \Delta (\theta^{n+1}|\theta^n) \geq \Delta (\theta^n|\theta^n) = 0 $$
 
 ![image](/assets/EM/maxmin.png)
 
-2.3 例子演算
-------
+#### 例子演算
 
 下面我们重新回顾下Section \[section:example\]中的例子，
 
