--- a/_posts/2016-03-13-PCA-SVD.md
+++ b/_posts/2016-03-13-PCA-SVD.md
@@ -7,3 +7,5 @@ date:   2016-03-13 19:35
 categories: 机器学习
 ---
 
+PCA（Principal Component Analysis）是一种常用的数据降维方法，通过线性变换将原始数据变换为一组各维度**线性无关**的表示，以提取数据的主要特征成分。本文着重于理清PCA的数学原理，并给出相应的证明。
+
