--- a/_posts/2016-03-13-PCA-SVD.md
+++ b/_posts/2016-03-13-PCA-SVD.md
@@ -9,3 +9,12 @@ categories: 机器学习
 
 PCA（Principal Component Analysis）是一种常用的数据降维方法，通过线性变换将原始数据变换为一组各维度**线性无关**的表示，以提取数据的主要特征成分。本文着重于理清PCA的数学原理，并给出相应的证明。
 
+#### 数据中的冗余和噪声
+我们先举一个例子，假设现在我们拿到这样一组数据，里面有两个属性，既有以“千米/每小时”度量的最大速度特征，也有“英里/小时”的最大速度特征，显然我们一眼就看出这两个特征有一个多余。
+
+![此处输入图片的描述][1]
+
+怎么直观的判断数据是否冗余? 上图从左往右，我们可以发现数据之间的关联性越来越强，也就是说两组数据越来越“相似”，我们用其中一组数据就能预测出另一组数据，这就是数据需要降维的其中一个原因：冗余。
+
+
+  [1]: http://7xjbdi.com1.z0.glb.clouddn.com/2016-03-14_164210.png?viewImage2/2/w/500
