--- a/_posts/2016-03-13-PCA-SVD.md
+++ b/_posts/2016-03-13-PCA-SVD.md
@@ -69,15 +69,13 @@ $$S_X = \frac{1}{n-1} XX^T \tag{2}$$
 我们要消除冗余，也就是要使$S_X$非对角线上的元素为0，也就是使得矩阵 $X$ 的任意两行**线性无关**。
 
 
-----------
-
-
 #### 数学描述
 
-我们得到了降维问题的优化目标：将一组 N 维向量降为K 维（K 大于0，小于N），其目标是选择K 个单位（模为1）**正交基**，使得原始数据变换到这组基上后，各字段两两间协方差为0，而字段的方差则尽可能大（在正交的约
-束下，取最大的K 个方差）。
+我们得到了降维问题可以表达为这样一个过程：
 
-这样我们就即减小了冗余，又降低了噪声！
+> 将一组 N 维向量降为K 维（K 大于0，小于N），其目标是选择K 个单位（模为1）**正交基**，使得原始数据变换到这组基上后，各字段两两间协方差为0，而字段的方差则尽可能大（在正交的约束下，取最大的K 个方差）。
+
+**这样我们就即减小了冗余，又降低了噪声！**
 
 
 ----------
@@ -97,11 +95,16 @@ $$P = \left(
 
 $X$在这组新基下的坐标为：
 
-$$Y = PX = $$
+$$Y = PX $$
 
 协方差矩阵：
 
-$$S_Y = \frac{1}{n-1} YY^T$$
+$$\begin{align*}
+S_Y & = \frac{1}{n-1} YY^T\\
+& = \frac{1}{n-1} (PX)(PX)^T\\
+& = \frac{1}{n-1} P(XX^T)P^T
+\end{align*}$$
+
 
   [1]: http://7xjbdi.com1.z0.glb.clouddn.com/2016-03-14_164210.png?imageView2/2/w/500
   [2]: http://7xjbdi.com1.z0.glb.clouddn.com/2016-03-14_164741.png?imageView2/2/w/300
