--- a/_posts/2016-03-13-PCA-SVD.md
+++ b/_posts/2016-03-13-PCA-SVD.md
@@ -113,14 +113,14 @@ $$A = XX^T$$
 也就是说，我们希望找到一组基来对角化 $A$，注意到 A 是对称矩阵，学过线性代数的都知道，对阵矩阵是肯定可以对角化的。
 
 > 一个n 行n 列的实对称矩阵 A 一定可以找到 n 个单位正交特征向量 $E = (e_1,e_2,\cdots,e_n )$，使得：
-
 $$E^TAE = 
 \left( \begin{array}{ccccc}
     \lambda_1 &  &  &   &   \\
       & \lambda_2 &   &   &   \\
       &   & \ddots &  &   \\
       &   &   & \lambda_n &  
-\end{array} \right)$$
+\end{array} \right) \tag{3}$$
+
 
   [1]: http://7xjbdi.com1.z0.glb.clouddn.com/2016-03-14_164210.png?imageView2/2/w/500
   [2]: http://7xjbdi.com1.z0.glb.clouddn.com/2016-03-14_164741.png?imageView2/2/w/300
