--- a/_posts/2016-03-15-Plsa.md
+++ b/_posts/2016-03-15-Plsa.md
@@ -7,3 +7,18 @@ date:   2016-03-15 15:30
 categories: 自然语言处理 推荐系统
 ---
 
+之前谈过的 "[Latent Semantic Analysis][2]"，可以用来解决一义多词的问题，但缺乏严谨的数理统计基础，同时SVD分解非常耗时，pLSA就是在这样的背景下被提出的。
+
+![此处输入图片的描述][1]
+
+和很多模型一样，pLSA 遵从 bag-of-words 假设，即只考虑一篇文档中单词出现的次数，而忽略单词的先后次序关系，且每个单词的出现都是彼此独立的。
+
+![此处输入图片的描述][3]
+
+
+----------
+
+
+  [1]: http://7xjbdi.com1.z0.glb.clouddn.com/f1_plsa.jpg
+  [2]: http://charlesx.top/2016/03/Latent-Semantic-Analysis/
+  [3]: http://7xjbdi.com1.z0.glb.clouddn.com/478px-Plsi_1.svg.png?imageView2/2/w/400
