--- a/_posts/2016-03-15-Plsa.md
+++ b/_posts/2016-03-15-Plsa.md
@@ -7,18 +7,19 @@ date:   2016-03-15 15:30
 categories: 自然语言处理 推荐系统
 ---
 
-之前谈过的 "[Latent Semantic Analysis][2]"，可以用来解决一义多词的问题，但缺乏严谨的数理统计基础，同时SVD分解非常耗时，pLSA就是在这样的背景下被提出的。
+之前谈过的 "[Latent Semantic Analysis][1]"，可以用来解决一义多词的问题，但缺乏严谨的数理统计基础，同时SVD分解非常耗时，pLSA就是在这样的背景下被提出的。
 
-![此处输入图片的描述][1]
+![此处输入图片的描述][2]
 
 和很多模型一样，pLSA 遵从 bag-of-words 假设，即只考虑一篇文档中单词出现的次数，而忽略单词的先后次序关系，且每个单词的出现都是彼此独立的。
 
 ![此处输入图片的描述][3]
 
+> pLSA 针对文本中隐含的主题来建模，在给定了文档 d 之后，需要以一定的概率选择与文档相对应的主题 z ，然后再从主题 z 中以一定的概率选择单词 w 。
 
 ----------
 
 
-  [1]: http://7xjbdi.com1.z0.glb.clouddn.com/f1_plsa.jpg
-  [2]: http://charlesx.top/2016/03/Latent-Semantic-Analysis/
-  [3]: http://7xjbdi.com1.z0.glb.clouddn.com/478px-Plsi_1.svg.png?imageView2/2/w/400
+  [1]: http://charlesx.top/2016/03/Latent-Semantic-Analysis/
+  [2]: http://7xjbdi.com1.z0.glb.clouddn.com/f1_plsa.jpg
+  [3]: http://7xjbdi.com1.z0.glb.clouddn.com/2016-03-16_152408.png?imageView2/2/w/400
