--- a/_posts/2016-03-15-Plsa.md
+++ b/_posts/2016-03-15-Plsa.md
@@ -15,7 +15,14 @@ categories: 自然语言处理 推荐系统
 
 ![此处输入图片的描述][3]
 
-> pLSA 针对文本中隐含的主题来建模，在给定了文档 d 之后，需要以一定的概率选择与文档相对应的主题 z ，然后再从主题 z 中以一定的概率选择单词 w 。
+pLSA假设每篇文档的是这样生成的：
+
+ - 以 $P(d)$ 的先验概率选择一篇文档 $d$ .
+ - 选定 d 后，以 $P(z|d)$ 的概率选中主题 z .
+ - 选中主题 z 后，以 $P(w|z)$ 的概率选中单词 w
+
+> 并且每个主题在所有词项上服从 Multinomial 分布，每个文档在所有主题上服从 Multinomial 分布。
+
 
 ----------
 
