--- a/_posts/2016-03-15-Plsa.md
+++ b/_posts/2016-03-15-Plsa.md
@@ -15,6 +15,8 @@ categories: 自然语言处理 推荐系统
 
 ![此处输入图片的描述][3]
 
+实心的节点 d 和 w 表示我们能观察到的文档和单词，空心节点 z 表示我们观察不到的隐藏变量，用来表示隐含的主题。
+
 pLSA假设每篇文档的是这样生成的：
 
  - 以 $P(d)$ 的先验概率选择一篇文档 $d$ 
