--- a/_posts/2016-03-15-Plsa.md
+++ b/_posts/2016-03-15-Plsa.md
@@ -11,6 +11,8 @@ categories: 自然语言处理 推荐系统
 
 ![此处输入图片的描述][2]
 
+
+#### pLSA
 和很多模型一样，pLSA 遵从 bag-of-words 假设，即只考虑一篇文档中单词出现的次数，而忽略单词的先后次序关系，且每个单词的出现都是彼此独立的。
 
 ![此处输入图片的描述][3]
