--- a/_posts/2016-03-15-Plsa.md
+++ b/_posts/2016-03-15-Plsa.md
@@ -21,14 +21,32 @@ categories: 自然语言处理 推荐系统
 
 实心的节点 d 和 w 表示我们能观察到的文档和单词，空心节点 z 表示我们观察不到的隐藏变量，用来表示隐含的主题。
 
-pLSA假设每篇文档的是这样生成的：
+pLSA假设每篇文档的生成过程是这样的：
 
-- 以 $P(d)$ 的先验概率选择一篇文档 $d$ 
-- 选定 d 后，以 $P(z\|d)$ 的概率选中主题 z 
-- 选中主题 z 后，以 $P(w\|z)$ 的概率选中单词 w
+- 以 $P(d)$ 的先验概率选择一篇文档 $d$      
+- 选定 d 后，以 $P(z|d)$ 的概率选中主题 z       
+- 选中主题 z 后，以 $P(w|z)$ 的概率选中单词 w       
 
 > 并且每个主题在所有词项上服从 Multinomial 分布，每个文档在所有主题上服从 Multinomial 分布。
 
+同时我们认为在给定 Topic z 的条件下，单词 w 和文档 d 之间是条件独立的，也就说：
+
+$$P(w|d,z) = P(w|z)$$
+
+那么，
+
+$$\begin{align*}
+P(d,w) &= P(d)P(w|d) \\
+P(w|d) & = \sum_{z\in \mathcal{Z}} P(w,z|d)\\
+&= \sum_{z\in \mathcal{Z}} P(w|d,z)P(z|d)
+\end{align*}$$
+
+即，
+
+$$\begin{align*}
+P(w|d) &= \sum_{z\in \mathcal{Z}} P(w|z)P(z|d) \tag{1}\\
+P(w,d) &= \sum_{z\in \mathcal{Z}} P(z)P(d|z)P(w|z) \tag{2}
+\end{align*}$$
 
 ----------
 
